--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
     <section id="services-container">
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
-            <div class="box">
+            <div class="box" id="first">
                 <img src="food images/food delivery.jpg" alt="">
                 <h2 class="h-secondary center">Food Ordering</h2>
                 <p class="center"> We deliver your favourite food from the 
                     best restraurants in town.</p>
             </div>
             <div id="services">
-                <div class="box">
+                <div class="box"  id="second" >
                     <img src="food images/catering.jpg" alt="">
                     <h2 class="h-secondary center">Food<br> Catering</h2>
                     <p class="center"> We also provide food catering services to bring the best food to your party</p>
                 </div>
                 <div id="services">
-                    <div class="box">
+                    <div class="box" id="third">
                         <img src="food images/bulk food.jpg" alt="">
                         <h2 class="h-secondary center">Bulk  <br> ordering</h2>
                         <p class="center"> Got a party at home and not feeling like cooking .Now we have Bulk ordering services also.</p>
